--- a/Page-1.css
+++ b/Page-1.css
@@ -512,7 +512,12 @@
   .u-section-3 .u-text-3 {
     font-size: 1.5rem;
   }
-}.u-section-4 .u-sheet-1 {
+}
+.u-section-4 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url("images/lukas-tennie-54Pfu4EK4pc-unsplash.jpg");
+  background-position: 50% 50%;
+}
+.u-section-4 .u-sheet-1 {
   min-height: 333px;
 }
 
