--- a/Page-1.css
+++ b/Page-1.css
@@ -516,6 +516,7 @@
 .u-section-4 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url("images/lukas-tennie-54Pfu4EK4pc-unsplash.jpg");
   background-position: 50% 50%;
+  background-repeat: no-repeat;
 }
 .u-section-4 .u-sheet-1 {
   min-height: 333px;
